--- a/src/pricetracker/templates/home.html
+++ b/src/pricetracker/templates/home.html
@@ -14,8 +14,8 @@
       <dt>Desired Price:
       <dd><input type="text" name="desired_price" size="30" value="{{ request.form.desired_price }}">
 
-      <dt>Email:
-      <dd><input type="text" name="email" size="30" value="{{ request.form.email }}">
+      <dt>Duration (days):
+      <dd><input type="text" name="duration" size="30" value="{{ request.form.duration }}">
     </dl>
     <div class="actions"><input type="submit" value="Submit"></div>
   </form>
