--- a/src/pricetracker/templates/layout.html
+++ b/src/pricetracker/templates/layout.html
@@ -1,8 +1,16 @@
 <!doctype html>
-<title>{% block title %}Welcome{% endblock %} | PriceTracker</title>
+<title>{% block title %}Welcome{% endblock %} | Tracker</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 <div class="page">
   <h1>PriceTracker</h1>
+  <div class="navigation">
+  {% if g.user %}
+    <a href="{{ url_for('home') }}">Home</a> |
+    <a href="{{ url_for('user_following', username='{{ g.user.username }}') }}">My Following</a> |
+    <a href="{{ url_for('logout') }}">Sign out [{{ g.user.username }}]</a>
+  {% endif %}
+  </div>
+
   {% with flashes = get_flashed_messages() %}
     {% if flashes %}
       <ul class="flashes">
@@ -16,6 +24,6 @@
   {% block body %}{% endblock %}
   </div>
   <div class="footer">
-    PriceTracker
+    ABX
   </div>
 </div>
