feat: add page showing user's following products

--- a/src/pricetracker/static/style.css
+++ b/src/pricetracker/static/style.css
@@ -95,13 +95,13 @@ div.page div.followstatus {
     font-size: 13px;
 }
 
-div.page ul.messages {
+div.page ul.following_products {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-div.page ul.messages li {
+div.page ul.following_products li {
     margin: 10px 0;
     padding: 5px;
     background: #F0FAF9;
@@ -111,16 +111,16 @@ div.page ul.messages li {
     min-height: 48px;
 }
 
-div.page ul.messages p {
+div.page ul.following_products p {
     margin: 0;
 }
 
-div.page ul.messages li img {
+div.page ul.following_products li img {
     float: left;
     padding: 0 10px 0 0;
 }
 
-div.page ul.messages li small {
+div.page ul.following_products li small {
     font-size: 0.9em;
     color: #888;
 }
