--- a/src/pricetracker/templates/login.html
+++ b/src/pricetracker/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Sign In{% endblock %}
 {% block body %}
-  <h2>Sign In</h2>
+  <h2>Welcome to PriceTracker!</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
