--- a/src/pricetracker/templates/following.html
+++ b/src/pricetracker/templates/following.html
@@ -1,49 +1,17 @@
 {% extends "layout.html" %}
-{% block title %}
-  {% if request.endpoint == 'public_timeline' %}
-    Public Timeline
-  {% elif request.endpoint == 'user_timeline' %}
-    {{ profile_user.username }}'s Timeline
-  {% else %}
-    My Timeline
-  {% endif %}
-{% endblock %}
+{% block title %}We are tracking these price for you!{% endblock %}
+
 {% block body %}
   <h2>{{ self.title() }}</h2>
-  {% if g.user %}
-    {% if request.endpoint == 'user_timeline' %}
-      <div class="followstatus">
-      {% if g.user.user_id == profile_user.user_id %}
-        This is you!
-      {% elif followed %}
-        You are currently following this user.
-        <a class="unfollow" href="{{ url_for('unfollow_user', username=profile_user.username)
-          }}">Unfollow user</a>.
-      {% else %}
-        You are not yet following this user.
-        <a class="follow" href="{{ url_for('follow_user', username=profile_user.username)
-          }}">Follow user</a>.
-      {% endif %}
-      </div>
-    {% elif request.endpoint == 'timeline' %}
-      <div class="twitbox">
-        <h3>What's on your mind {{ g.user.username }}?</h3>
-        <form action="{{ url_for('add_message') }}" method="post">
-          <p><input type="text" name="text" size="60"><!--
-          --><input type="submit" value="Share">
-        </form>
-      </div>
-    {% endif %}
-  {% endif %}
-  <ul class="messages">
-  {% for message in messages %}
-    <li><img src="{{ message.email|gravatar(size=48) }}"><p>
-      <strong><a href="{{ url_for('user_timeline', username=message.username)
-      }}">{{ message.username }}</a></strong>
-      {{ message.text }}
-      <small>&mdash; {{ message.pub_date|datetimeformat }}</small>
-  {% else %}
-    <li><em>There's no message so far.</em>
+
+  <ul class="following_products">
+  {% for following_product in following_products %}
+    <li>
+      <p><srong>Product: </srong><span><a href="{{ following_product.url_product }}">{{ following_product.url_product }}</a></span></p>
+      <p><srong>Submitted Price: </srong><span>{{ following_product.current_price }}</span></p>
+      <p><srong>Desired Price:</srong><span> {{ following_product.desired_price }}</span></p>
+    </li>
   {% endfor %}
   </ul>
+  
 {% endblock %}
