--- a/src/pricetracker/templates/layout.html
+++ b/src/pricetracker/templates/layout.html
@@ -6,7 +6,7 @@
   <div class="navigation">
   {% if g.user %}
     <a href="{{ url_for('home') }}">Home</a> |
-    <a href="{{ url_for('user_following', username='{{ g.user.username }}') }}">My Following</a> |
+    <a href="{{ url_for('user_following') }}">My Following</a> |
     <a href="{{ url_for('logout') }}">Sign out [{{ g.user.username }}]</a>
   {% endif %}
   </div>
