feat: add mail config

--- a/src/pricetracker/templates/following.html
+++ b/src/pricetracker/templates/following.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
-{% block title %}We are tracking these price for you!{% endblock %}
+{% block title %}Following{% endblock %}
 
 {% block body %}
-  <h2>{{ self.title() }}</h2>
+  <h2>We are tracking these price for you!</h2>
 
   <ul class="following_products">
   {% for following_product in following_products %}
