feat: get price_path whenever user submit a product

--- a/src/pricetracker/templates/home.html
+++ b/src/pricetracker/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Price Tracking{% endblock %}
 {% block body %}
-  <h2>Let me help you tracking the price!</h2>
+  <h2>Let me help you track the price!</h2>
   {% if status %}<div class="error"><strong>Status:</strong> {{ status }}</div>{% endif %}
   <form action="" method="post">
     <dl>
