--- a/src/pricetracker/static/style.less
+++ b/src/pricetracker/static/style.less
@@ -1,3 +1,5 @@
+@red: #FF0000;
+
 body {
     background: #CAECE9;
     font-family: 'Trebuchet MS', sans-serif;
@@ -35,6 +37,12 @@ input[type="submit"], button {
     -webkit-border-radius: 2px;
     color: white;
 }
+
+input.btstop {
+    background: @red;
+}
+
+
 
 
 div.page {
