--- a/src/pricetracker/templates/following.html
+++ b/src/pricetracker/templates/following.html
@@ -11,6 +11,7 @@
       <p><srong>Submitted Price: </srong><span>{{ following_product.submited_price }}</span></p>
       <p><srong>Desired Price:</srong><span> {{ following_product.desired_price }}</span></p>
       <form action="stop_follow" method="post">
+        <input type="hidden" name="product_id" value="{{following_product.id}}">
         <input type="submit" value="Stop" class="btstop">
       </form>
     </li>
