refactor: arrange button stop

--- a/src/pricetracker/static/style.less
+++ b/src/pricetracker/static/style.less
@@ -40,10 +40,8 @@ input[type="submit"], button {
 
 input.btstop {
     background: @red;
+    float: right;
 }
-
-
-
 
 div.page {
     background: white;
@@ -117,6 +115,7 @@ div.page ul.following_products li {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     min-height: 48px;
+    overflow: auto;
 }
 
 div.page ul.following_products p {
