--- a/src/pricetracker/static/style.css
+++ b/src/pricetracker/static/style.css
@@ -34,6 +34,7 @@ button {
 }
 input.btstop {
   background: #FF0000;
+  float: right;
 }
 div.page {
   background: white;
@@ -98,6 +99,7 @@ div.page ul.following_products li {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   min-height: 48px;
+  overflow: auto;
 }
 div.page ul.following_products p {
   margin: 0;
