feat: alter My Following page

--- a/src/pricetracker/static/style.css
+++ b/src/pricetracker/static/style.css
@@ -34,7 +34,16 @@ button {
 }
 input.btstop {
   background: #FF0000;
-  float: right;
+}
+.form-stop-follow {
+  margin-bottom: 2px;
+  margin-top: 5px;
+}
+button.btstop {
+  background-color: Transparent;
+  border: 1px solid #597875;
+  color: black;
+  font-weight: normal;
 }
 div.page {
   background: white;
@@ -99,7 +108,6 @@ div.page ul.following_products li {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   min-height: 48px;
-  overflow: auto;
 }
 div.page ul.following_products p {
   margin: 0;
