--- a/src/pricetracker/static/style.less
+++ b/src/pricetracker/static/style.less
@@ -40,9 +40,19 @@ input[type="submit"], button {
 
 input.btstop {
     background: @red;
-    float: right;
 }
 
+.form-stop-follow {
+    margin-bottom: 2px;
+    margin-top: 5px;
+}
+
+button.btstop{
+    background-color: Transparent;
+    border: 1px solid #597875;
+    color: black;
+    font-weight: normal;
+}
 div.page {
     background: white;
     border: 1px solid #6ECCC4;
@@ -115,7 +125,6 @@ div.page ul.following_products li {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     min-height: 48px;
-    overflow: auto;
 }
 
 div.page ul.following_products p {
