--- a/src/pricetracker/templates/home.html
+++ b/src/pricetracker/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Price Tracking{% endblock %}
+{% block title %}Home{% endblock %}
 {% block body %}
   <h2>Let me help you track the price!</h2>
   {% if status %}<div class="error"><strong>Status:</strong> {{ status }}</div>{% endif %}
